Correção de artigos dos Estados

--- a/mapas.html
+++ b/mapas.html
@@ -198,7 +198,7 @@
       xml:space="preserve">
         <g>
           <a href="#divconsult" onclick="preencerLateral('to')">
-          <title>Tocantins</title>
+          <title>do Tocantins</title>
             <path stroke="#FFFFFF" stroke-width="1.0404" stroke-linecap="round" stroke-linejoin="round" d="M289.558,235.641
             c16.104,0.575,44.973-31.647,44.835-45.259c-0.136-13.612-17.227-58.446-22.349-66.088c-5.122-7.628-37.905,2.506-37.905,2.506
             S234.852,233.695,289.558,235.641z"></path>
@@ -546,7 +546,7 @@
           <div class="row g-5">
             <div class="col-lg-12 wow">
               <h1 style="text-align: center;">
-                Nossos consultores do <span id="estado_selecionado"></span>
+                Nossos consultores <span id="estado_selecionado"></span>
               </h1>
               <div class="row g-3">
                 
@@ -614,9 +614,9 @@
 
         let html = '';
 
-        if (uf === 'ba') { html = 'Bahia'; }
-        if (uf === 'se') { html = 'Sergipe'; }
-        if (uf === 'pe') { html = 'Pernambuco'; }
+        if (uf === 'ba') { html = 'da Bahia'; }
+        if (uf === 'se') { html = 'do Sergipe'; }
+        if (uf === 'pe') { html = 'de Pernambuco'; }
         if (uf === 'al') { html = 'Alagoas'; }
         if (uf === 'am') { html = 'Amazonas'; }
         if (uf === 'pa') { html = 'Para'; }
