--- a/mapas.html
+++ b/mapas.html
@@ -198,7 +198,7 @@
       xml:space="preserve">
         <g>
           <a href="#divconsult" onclick="preencerLateral('to')">
-          <title>do Tocantins</title>
+          <title>Tocantins</title>
             <path stroke="#FFFFFF" stroke-width="1.0404" stroke-linecap="round" stroke-linejoin="round" d="M289.558,235.641
             c16.104,0.575,44.973-31.647,44.835-45.259c-0.136-13.612-17.227-58.446-22.349-66.088c-5.122-7.628-37.905,2.506-37.905,2.506
             S234.852,233.695,289.558,235.641z"></path>
@@ -617,30 +617,30 @@
         if (uf === 'ba') { html = 'da Bahia'; }
         if (uf === 'se') { html = 'do Sergipe'; }
         if (uf === 'pe') { html = 'de Pernambuco'; }
-        if (uf === 'al') { html = 'Alagoas'; }
-        if (uf === 'am') { html = 'Amazonas'; }
-        if (uf === 'pa') { html = 'Para'; }
-        if (uf === 'mt') { html = 'Mato Grosso'; }
-        if (uf === 'ro') { html = 'Rondonia'; }
-        if (uf === 'ac') { html = 'Acre'; }
-        if (uf === 'ap') { html = 'Amapa'; }
-        if (uf === 'rj') { html = 'Rio de Janeiro'; }
-        if (uf === 'rs') { html = 'Rio Grande do Sul'; }
-        if (uf === 'sc') { html = 'Santa Catarina'; }
-        if (uf === 'pr') { html = 'Parana'; }
-        if (uf === 'sp') { html = 'Sao Paulo'; }
-        if (uf === 'ms') { html = 'Mato Grosso do Sul'; }
-        if (uf === 'go') { html = 'Goias'; }
-        if (uf === 'mg') { html = 'Minas Gerais'; }
-        if (uf === 'es') { html = 'Espirito Santo'; }
-        if (uf === 'pi') { html = 'Piaui'; }
-        if (uf === 'ce') { html = 'Ceara'; }
-        if (uf === 'rr') { html = 'Roraima'; }
-        if (uf === 'to') { html = 'Tocantins'; }
-        if (uf === 'ma') { html = 'Maranhao'; }
-        if (uf === 'rn') { html = 'Rio Grande do Norte'; }
-        if (uf === 'pb') { html = 'Paraiba'; }
-        if (uf === 'df') { html = 'Distrito Federal'; }
+        if (uf === 'al') { html = 'de Alagoas'; }
+        if (uf === 'am') { html = 'do Amazonas'; }
+        if (uf === 'pa') { html = 'do Para'; }
+        if (uf === 'mt') { html = 'do Mato Grosso'; }
+        if (uf === 'ro') { html = 'de Rondonia'; }
+        if (uf === 'ac') { html = 'do Acre'; }
+        if (uf === 'ap') { html = 'do Amapa'; }
+        if (uf === 'rj') { html = 'do Rio de Janeiro'; }
+        if (uf === 'rs') { html = 'do Rio Grande do Sul'; }
+        if (uf === 'sc') { html = 'de Santa Catarina'; }
+        if (uf === 'pr') { html = 'do Parana'; }
+        if (uf === 'sp') { html = 'de Sao Paulo'; }
+        if (uf === 'ms') { html = 'do Mato Grosso do Sul'; }
+        if (uf === 'go') { html = 'de Goias'; }
+        if (uf === 'mg') { html = 'de Minas Gerais'; }
+        if (uf === 'es') { html = 'do Espirito Santo'; }
+        if (uf === 'pi') { html = 'do Piaui'; }
+        if (uf === 'ce') { html = 'do Ceara'; }
+        if (uf === 'rr') { html = 'de Roraima'; }
+        if (uf === 'to') { html = 'do Tocantins'; }
+        if (uf === 'ma') { html = 'do Maranhao'; }
+        if (uf === 'rn') { html = 'do Rio Grande do Norte'; }
+        if (uf === 'pb') { html = 'da Paraiba'; }
+        if (uf === 'df') { html = 'do Distrito Federal'; }
 
         if (html !== '') {
           document.getElementById("container_dados").style.display = 'block';
