Acentuação dos Estados

--- a/mapas.html
+++ b/mapas.html
@@ -539,7 +539,6 @@
     </div>
     <!-- Map End -->
 
-    
     <div id="divconsult"class="container-xxl py-5">
       <div  id="container_dados" style="display: none">
         <div class="container">
@@ -619,27 +618,27 @@
         if (uf === 'pe') { html = 'de Pernambuco'; }
         if (uf === 'al') { html = 'de Alagoas'; }
         if (uf === 'am') { html = 'do Amazonas'; }
-        if (uf === 'pa') { html = 'do Para'; }
+        if (uf === 'pa') { html = 'do Pará'; }
         if (uf === 'mt') { html = 'do Mato Grosso'; }
-        if (uf === 'ro') { html = 'de Rondonia'; }
+        if (uf === 'ro') { html = 'de Rondônia'; }
         if (uf === 'ac') { html = 'do Acre'; }
-        if (uf === 'ap') { html = 'do Amapa'; }
+        if (uf === 'ap') { html = 'do Amapá'; }
         if (uf === 'rj') { html = 'do Rio de Janeiro'; }
         if (uf === 'rs') { html = 'do Rio Grande do Sul'; }
         if (uf === 'sc') { html = 'de Santa Catarina'; }
-        if (uf === 'pr') { html = 'do Parana'; }
-        if (uf === 'sp') { html = 'de Sao Paulo'; }
+        if (uf === 'pr') { html = 'do Paraná'; }
+        if (uf === 'sp') { html = 'de São Paulo'; }
         if (uf === 'ms') { html = 'do Mato Grosso do Sul'; }
-        if (uf === 'go') { html = 'de Goias'; }
+        if (uf === 'go') { html = 'de Goiás'; }
         if (uf === 'mg') { html = 'de Minas Gerais'; }
         if (uf === 'es') { html = 'do Espirito Santo'; }
-        if (uf === 'pi') { html = 'do Piaui'; }
-        if (uf === 'ce') { html = 'do Ceara'; }
+        if (uf === 'pi') { html = 'do Piauí'; }
+        if (uf === 'ce') { html = 'do Ceará'; }
         if (uf === 'rr') { html = 'de Roraima'; }
         if (uf === 'to') { html = 'do Tocantins'; }
-        if (uf === 'ma') { html = 'do Maranhao'; }
+        if (uf === 'ma') { html = 'do Maranhão'; }
         if (uf === 'rn') { html = 'do Rio Grande do Norte'; }
-        if (uf === 'pb') { html = 'da Paraiba'; }
+        if (uf === 'pb') { html = 'da Paraíba'; }
         if (uf === 'df') { html = 'do Distrito Federal'; }
 
         if (html !== '') {
