--- a/mapas.html
+++ b/mapas.html
@@ -552,7 +552,7 @@
                 <div class="col-sm-4 wow">
                   <div class="bg-light rounded h-100 p-3">
                     <div style="background-color: #274a85;" class="d-flex flex-column justify-content-center text-center rounded h-100 py-4 px-3">
-                      <img class="align-self-center mb-3" src="img/Representante-Demo.png" style="width: 100px; height: 100px; border-radius: 100px;" alt="">
+                      <img class="align-self-center mb-3" src="img/Representante-Demo.png" style="object-fit: cover; width: 100px; height: 100px; border-radius: 100px;" alt="">
                       <h5 class="mb-0" style="color: white;">Nome do Consultor</h5>
                       <div style="text-align: left; margin-top: 12%;">
                         <p style="font-weight: bold; color: white;">Local: </p>
@@ -569,7 +569,7 @@
                 <div class="col-sm-4 wow">
                   <div class="bg-light rounded h-100 p-3">
                     <div style="background-color: #274a85;" class="d-flex flex-column justify-content-center text-center rounded h-100 py-4 px-3">
-                      <img class="align-self-center mb-3" src="img/Representante-Demo.png" style="width: 100px; height: 100px; border-radius: 100px;" alt="">
+                      <img class="align-self-center mb-3" src="img/Representante-Demo.png" style="object-fit: cover; width: 100px; height: 100px; border-radius: 100px;" alt="">
                       <h5 class="mb-0" style="color: white;">Nome do Consultor</h5>
                       <div style="text-align: left; margin-top: 12%;">
                         <p style="font-weight: bold; color: white;">Local: </p>
@@ -586,7 +586,7 @@
                 <div class="col-sm-4 wow">
                   <div class="bg-light rounded h-100 p-3">
                     <div style="background-color: #274a85;" class="d-flex flex-column justify-content-center text-center rounded h-100 py-4 px-3">
-                      <img class="align-self-center mb-3" src="img/Representante-Demo.png" style="width: 100px; height: 100px; border-radius: 100px;" alt="">
+                      <img class="align-self-center mb-3" src="img/Representante-Demo.png" style="object-fit: cover; width: 100px; height: 100px; border-radius: 100px;" alt="">
                       <h5 class="mb-0" style="color: white;">Nome do Consultor</h5>
                       <div style="text-align: left; margin-top: 12%;">
                         <p style="font-weight: bold; color: white;">Local: </p>
