--- a/about.html
+++ b/about.html
@@ -219,74 +219,84 @@
       </div>
     </div> 
     
-    <div
-      class="container-fluid bg-dark footer mt-5 pt-5 wow fadeIn"
-      data-wow-delay="0.1s"
-    >
-      <div class="container py-5">
-        <div class="row g-5">
-          <div class="col-lg-3 col-md-6">
-            <h1 class="text-white mb-4">
-              <img
-                class="img-fluid me-3"
-                src="img/logo.png"
-                alt=""
-              />
-            </h1>
-            <!-- <p style="color:rgba(255, 255, 255, 0.9)">  
-              Nossas redes sociais
-            </p>
-            <div class="d-flex pt-2">
-              <a class="btn btn-square me-1" href=""
-                ><i class="fab fa-twitter"></i
-              ></a>
-              <a class="btn btn-square me-1" href=""
-                ><i class="fab fa-facebook-f"></i
-              ></a>
-              <a class="btn btn-square me-1" href=""
-                ><i class="fab fa-youtube"></i
-              ></a>
-              <a class="btn btn-square me-0" href=""
-                ><i class="fab fa-linkedin-in"></i
-              ></a>
-            </div>-->
-          </div>
-          <div class="col-lg-3 col-md-6">
-            <h5 class="text-light mb-4">Endereço</h5>
-            <p style="color: white;">
-              <i class="fa fa-map-marker-alt me-3"></i>Av. Dão Silveira 3860, Loja 3 - Candelária / Natal-RN
-            </p>
-            <p style="color: white;"><i class="fa fa-phone-alt me-3"></i>(84)99913-8890 / (84)99452-2888</p>
-            <p style="color: white;"><i class="fa fa-envelope me-3"></i>comercial@feelingholding.com.br</p>
-          </div>
-          <div class="col-lg-3 col-md-6">
-            <h5 class="text-light mb-4">Menu</h5>
-            <a class="btn btn-link" href="index.html">Home</a>
-            <a class="btn btn-link" href="mapas.html">Mapa</a>
-            <a class="btn btn-link" href="contact.html">Contato</a>
-          </div>
-      </div>      
-
-      <div class="container-fluid copyright">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-6 text-center text-md-start mb-3 mb-md-0" style="color: white;">
-              &copy; <a href="#" style="color: #F58634">Feeling</a>, todos os direitos reservados.
-            </div>
-            <div class="col-md-6 text-center text-md-end">
-              Criado por <a style="color: #F58634" href="#" target="_blank">WebCodeRN</a>
-          </div>
+<!-- Footer Start -->
+<div
+class="container-fluid bg-dark footer mt-5 pt-5 wow fadeIn"
+data-wow-delay="0.1s"
+>
+<div class="container py-5">
+  <div class="row g-5">
+    <div class="col-lg-3 col-md-6">
+      <h1 class="text-white mb-4">
+        <img
+          class="img-fluid me-3"
+          src="img/logo.png"
+          alt=""
+        />
+      </h1>
+      <p style="color:rgba(255, 255, 255, 0.9)"> 
+        Nossas redes sociais
+      </p>
+      <div class="d-flex pt-2">
+        <a class="btn btn-square me-1" href=""
+          ><i class="fab fa-twitter"></i
+        ></a>
+        <a class="btn btn-square me-1" href=""
+          ><i class="fab fa-facebook-f"></i
+        ></a>
+        <a class="btn btn-square me-1" href=""
+          ><i class="fab fa-youtube"></i
+        ></a>
+        <a class="btn btn-square me-0" href=""
+          ><i class="fab fa-linkedin-in"></i
+        ></a>
       </div>
     </div>
+    <div class="col-lg-3 col-md-6">
+      <h5 class="text-light mb-4">Endereço</h5>
+      <p style="color: white;">
+        <i class="fa fa-map-marker-alt me-3"></i>Av. Dão Silveira 3860, Loja 3 - Candelária / Natal-RN
+      </p>
+      <p style="color: white;"><i class="fa fa-phone-alt me-3"></i>(84)99913-8890 / (84)99452-2888</p>
+      <p style="color: white;"><i class="fa fa-envelope me-3"></i>comercial@feelingholding.com.br</p>
+    </div>
+    <div class="col-lg-3 col-md-6">
+      <h5 class="text-light mb-4">Menu</h5>
+      <a class="btn btn-link" href="index.html">Home</a>
+      <a class="btn btn-link" href="about.html">Sobre</a>
+      <a class="btn btn-link" href="contact.html">Contato</a>
+    </div>
+</div>      
 
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="lib/wow/wow.min.js"></script>
-    <script src="lib/easing/easing.min.js"></script>
-    <script src="lib/waypoints/waypoints.min.js"></script>
-    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
-    <script src="lib/counterup/counterup.min.js"></script>
+<div class="container-fluid copyright">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6 text-center text-md-start mb-3 mb-md-0" style="color: white;">
+        &copy; <a href="#" style="color: #F58634">Feeling</a>, todos os direitos reservados.
+      </div>
+      <div class="col-md-6 text-center text-md-end">
+        Criado por <a style="color: #F58634" href="#" target="_blank">WebCodeRN</a>
+    </div>
+</div>
+</div>
 
-    <script src="js/main.js"></script>
+
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
+<script src="lib/wow/wow.min.js"></script>
+<script src="lib/easing/easing.min.js"></script>
+<script src="lib/waypoints/waypoints.min.js"></script>
+<script src="lib/owlcarousel/owl.carousel.min.js"></script>
+<script src="lib/counterup/counterup.min.js"></script>
+
+<script src="js/main.js"></script>
+
+<script type="text/javascript" src="assetsMap/js/loader.js"></script>
+<script type="text/javascript" src="assetsMap/js/jsapi.js"></script>
+<script type="text/javascript" src="assetsMap/js/jquery-3.3.1.min.js"></script>
+
+<script type="text/javascript">
+google.charts.load('current', {'packages':['geochart']});
+google.charts.setOnLoadCallback(drawRegionsMap);
   </body>
 </html>
