--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
 
                 <div class="col-sm-6">
                   <p class="fs-5 text-primary">+ Projetos entregues:</p>
-                  <h3 class="display-5" data-toggle="counter-up"> 1000 Projetos Entregues</h3>
+                  <h3 class="display-5" data-toggle="counter-up"> 1000</h3><h3 class="display-5">projetos entregues</h3>
                   
                 </div>
 
