Espaço do titulo

--- a/robotica.html
+++ b/robotica.html
@@ -162,11 +162,11 @@
     </nav>
 
     <div
-      class="container-fluid page-header py-5 mb-5 wow fadeIn"
+      class="container-fluid page-header wow fadeIn"
       data-wow-delay="0.1s"
     >
-      <div class="container py-5">
-        <h1 class="display-4 animated slideInDown mb-4">Robótica Na Escola</h1>
+      <div class="container">
+        <h1 class="display-4 animated slideInDown">Robótica Na Escola</h1>
         <nav aria-label="breadcrumb animated slideInDown">
           <ol class="breadcrumb mb-0">
           </ol>
@@ -174,7 +174,7 @@
       </div>
     </div>
 
-    <div class="container-xxl py-5">
+    <div class="container-xxl">
       <div class="container">
         <div class="row g-5">
 
