Remoção de números

--- a/robotica.html
+++ b/robotica.html
@@ -215,14 +215,18 @@
                 Itens:
               </p>
               <p class="mb-4" Align="justify">
-                Projetos montáveis compostos por centenas de peças (metal e plásticos), cronograma para o professor, curso de programação e robótica, software específico, livros do aluno e livros específicos do professor.
+                Projetos montáveis compostos por centenas de peças (metal e plásticos), cronograma para o professor, curso de 
+                programação e robótica, software específico, livros do aluno e livros específicos do professor.
               </p>
 
               <p class="fs-5 text-primary mb-4">
-                Publico
+                Público
               </p>
               <p class="mb-4" Align="justify">
-                Oferecemos 05 opções de laboratório, cada um direcionado ao nível de ensino (Ensino infantil. Fundamental I - A e B, Fundamental II e Ensino Médio), podendo atender por vez 01 grupo de até 3 a 5 alunos. Além disso, temos a opção dos nossos 02 super laboratórios, um destinado ao Ensino Fundamental I e II, e o outro contemplando o Ensino Médio, ambos atendem por vez 01 grupo de até 40 anos.
+                Oferecemos várias opções de laboratório, cada um direcionado ao nível de ensino (Ensino infantil. Fundamental I - A e B,
+                Fundamental II e Ensino Médio), podendo atender por vez um grupo de 3 a 5 alunos. Além disso, temos a opção de super 
+                laboratórios, destinados ao Ensino Fundamental I e II e ao Ensino Médio, ambos atendem por vez grupos com faixa etária
+                de até 40 anos.
               </p>
               
               <a href="https://drive.google.com/file/d/1lAqCAeU42z7NeHg3VXBJbdrKOiTIVZeY/view?usp=share_link" class="align-self-start btn btn-secondary py-3 px-5">Acesse o Folder</a>
