--- a/robotica.html
+++ b/robotica.html
@@ -165,13 +165,8 @@
       class="container-fluid page-header wow fadeIn"
       data-wow-delay="0.1s"
     >
-      <div class="container">
-        <h1 class="display-4 animated slideInDown">Robótica Na Escola</h1>
-        <nav aria-label="breadcrumb animated slideInDown">
-          <ol class="breadcrumb mb-0">
-          </ol>
-        </nav>
-      </div>
+    <div class="container" style="padding-top: 1.5rem !important;">
+      <h1 class="display-4 animated slideInDown mb-4">Robótica na Escola</h1>
     </div>
 
     <div class="container-xxl">
