--- a/mapas.html
+++ b/mapas.html
@@ -170,7 +170,7 @@
 
     <!-- Page Header Start -->
     <div class="container" style="padding-top: 1.5rem !important;">
-      <h1 class="display-4 animated slideInDown mb-4">Mapa de Consultores (Eduarda)</h1>
+      <h1 class="display-4 animated slideInDown mb-4">Mapa de Consultores</h1>
     </div>
     <!-- Page Header End -->
 
