--- a/contact.html
+++ b/contact.html
@@ -163,7 +163,7 @@
 
     <div class="container-xxl" style="padding-top: 1.5rem !important;">
       <div class="container">
-        <h1 class="display-4 animated slideInDown mb-4">Entre em contato conosco</h1>
+        <h1 class="display-4 animated slideInDown mb-4">Entre em contato conosco!</h1>
       </div>
     </div>
 
