--- a/robotica.html
+++ b/robotica.html
@@ -170,7 +170,7 @@
       <div class="container">
         <div class="row g-5">
 
-          <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
+          <div>
             <div
               class="position-relative overflow-hidden rounded h-100"
               style="min-height: 400px">
@@ -183,11 +183,9 @@
           </div>
 
           <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
-            <div class="h-100">
-
-              <h1 class="display-6 mb-5"></h1>
-
-              <p class="fs-5 text-primary mb-4">
+            <div class="">
+              <h1 class=""></h1>
+              <p class="text-primary mb-4">
                 Importância:
               </p>
               <p class="mb-4" Align="justify">
