--- a/robotica.html
+++ b/robotica.html
@@ -161,26 +161,9 @@
       </div>
     </nav>
 
-    <div
-      class="container-fluid page-header wow fadeIn"
-      data-wow-delay="0.1s"
-    >
-
-    <div class="container-xxl">
-      <div class="container">
-        <div class="row g-5">
-
-          <div>
-            <div
-              class="position-relative overflow-hidden rounded h-100"
-              style="min-height: 400px">
-              <img
-                class="position-absolute w-100 h-110"
-                src="img/projetos/robotica1.jpg"
-                alt=""
-                style="object-fit: cover"/>
-            </div>
-          </div>
+  <div>
+    <svg src="img/projetos/robotica/robotica1.jpg"></svg>
+  </div>
 
           <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
             <div class="">
