--- a/robotica.html
+++ b/robotica.html
@@ -162,7 +162,7 @@
     </nav>
 
   <div>
-    <svg src="img/projetos/robotica/robotica1.jpg"></svg>
+    <svg src="img/projetos/robotica/robotica1.svg"></svg>
   </div>
 
           <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
