--- a/robotica.html
+++ b/robotica.html
@@ -162,7 +162,9 @@
     </nav>
 
   <div>
-    <svg src="img/projetos/robotica/robotica1.svg"></svg>
+    <img src="img/projetos/robotica/robotica1.svg"
+    style="display: inline;" alt="test svg">
+  </img>
   </div>
 
           <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
