--- a/robotica.html
+++ b/robotica.html
@@ -161,10 +161,15 @@
       </div>
     </nav>
 
-  <div>
-    <img src="img/projetos/robotica/robotica_1.svg"
-    style="display: inline;" alt="test svg">
-  </img>
+  <div style="display: inline;">
+    <svg src="img/projetos/robotica/robotica1.svg"
+     alt="test svg"
+     x="0px"
+     y="0px" 
+     viewBox="0 0 450 500" 
+     enable-background="new 0 0 450 460"
+     xml:space="preserve">
+  </svg>
   </div>
 
           <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
