Modificação nos textos de robotica

--- a/robotica.html
+++ b/robotica.html
@@ -161,42 +161,39 @@
       </div>
     </nav>
 
-  <div style="display: inline;">
-    <svg src="img/projetos/robotica/robotica1.svg"
-     alt="test svg"
-     x="0px"
-     y="0px" 
-     viewBox="0 0 450 500" 
-     enable-background="new 0 0 450 460"
-     xml:space="preserve">
-  </svg>
+  <div 
+  class="position-relative overflow-hidden rounded h-100" style="max-height: 230px">
+    <img src="img/robotica/robotica1.svg" 
+    width="100%" 
+    style="object-position: 50% 50%; background-color:black";
+    alt="header"/>
   </div>
-
-          <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
-            <div class="">
-              <h1 class=""></h1>
-              <p class="text-primary mb-4">
-                Importância:
-              </p>
-              <p class="mb-4" Align="justify">
-                Aprender a ler, escrever e resolver operações matemáticas, são habilidades essenciais e devem ser estimuladas nas crianças. Através da expansão dos meios digitais, a utilização de ferramentas como a robótica podem potencializar o desenvolvimento dessas aptidões, e já não é mais novidade que muitas escolas em diversos países incluíram o uso da tecnologia em sua grade curricular, tornando o processo de ensino aprendizagem mais moderno e eficiente.
-              </p>
-            </div>
-          </div>
-
           <!--  -->
-
          <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
             <div class="h-100">
 
               <h1 class="display-6 mb-5"></h1>
+              <p class="fs-5 text-primary mb-4">
+                Importância:
+              </p>
+              <p class="mb-4" Align="justify">
+                Aprender a ler, escrever e resolver operações matemáticas, são 
+                habilidades essenciais e devem ser estimuladas nas crianças. Através 
+                da expansão dos meios digitais, a utilização de ferramentas como a 
+                robótica podem potencializar o desenvolvimento dessas aptidões, e já 
+                não é mais novidade que muitas escolas em diversos países incluíram o 
+                uso da tecnologia em sua grade curricular, tornando o processo de ensino 
+                aprendizagem mais moderno e eficiente.
+              </p>
 
               <p class="fs-5 text-primary mb-4">
                 Itens:
               </p>
               <p class="mb-4" Align="justify">
-                Projetos montáveis compostos por centenas de peças (metal e plásticos), cronograma para o professor, curso de 
-                programação e robótica, software específico, livros do aluno e livros específicos do professor.
+                Projetos montáveis compostos por centenas de peças (metal e plásticos), 
+                cronograma para o professor, curso de 
+                programação e robótica, software específico, livros do aluno e livros 
+                específicos do professor.
               </p>
 
               <p class="fs-5 text-primary mb-4">
@@ -212,19 +209,6 @@
               <a href="https://drive.google.com/file/d/1lAqCAeU42z7NeHg3VXBJbdrKOiTIVZeY/view?usp=share_link" class="align-self-start btn btn-secondary py-3 px-5">Acesse o Folder</a>
             </div>
           </div>
-
-          <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
-            <div
-              class="position-relative overflow-hidden rounded ps-5 pt-5 h-100"
-              style="min-height: 500px">
-              <img
-                class="position-absolute w-100 h-100"
-                src="img/projetos/robotica2.jpg"
-                alt=""
-                style="object-fit: cover"/>
-            </div>
-          </div>
-
         </div>
       </div>
     </div> 
