--- a/test.html
+++ b/test.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="img/robotica/robotica1.svg" role="img" alt="A vector star">
+    <img src="img/robotica/robotica1.svg" width="100%" role="img" alt="A vector star">
 </body>
 </html>
