--- a/robotica.html
+++ b/robotica.html
@@ -169,7 +169,7 @@
     alt="header"/>
   </div>
           <!--  -->
-         <div class="col-lg-6 wow fadeInUp" style="margin: 0 30 30 0" data-wow-delay="0.5s">
+         <div class="wow fadeInUp" style="margin: 0 30 30 0" data-wow-delay="0.5s">
             <div class="h-100">
 
               <h1 class="display-6 mb-5"></h1>
