Mudanças nos rodapés para preencher 100% da largura

--- a/labs.html
+++ b/labs.html
@@ -213,7 +213,8 @@
             <a style="width: 100%;" href="inclusao.html" class="btn btn-primary">Ver</a>
           </div>
       </div>
-
+    </div>
+    </div>
       <div class="card" style="margin-left: 1.5%; width: 18rem;">
         <img class="card-img-top" src="img/3d.jpg" alt="Card image cap">
           <div class="card-body">
