Remoção de imagem da página sobre

--- a/about.html
+++ b/about.html
@@ -170,19 +170,7 @@
       <div class="container">
         <div class="row g-5">
 
-          <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
-            <div
-              class="position-relative overflow-hidden rounded h-100"
-              style="min-height: 200px">
-              <img
-                class="position-absolute w-120 h-100"
-                src="img/quemsomos.jpg"
-                alt=""
-                style="object-fit: cover"/>
-            </div>
-          </div>
-
-          <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
+                    <div class="col wow fadeInUp" data-wow-delay="0.5s">
             <div class="h-100">
 
               <!-- <h1 class="display-6 mb-5"> Quem Somos</h1> -->
