--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <div vw-plugin-wrapper>
         <div class="vw-plugin-top-wrapper"></div>
     </div>
-    
+    </div>
     <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
     <script>
       new window.VLibras.Widget('https://vlibras.gov.br/app');
@@ -185,7 +185,7 @@
                     <h1 class="display-3 text-dark mb-4 animated slideInDown">
                       Acumulamos mais de 10 anos no mercado
                     </h1>
-                    <p class="fs-5 text-body mb-5" align="justify">
+                    <p class="fs-4 text-body mb-5">
                       Acreditamos na educação como o pilar para um desenvolvimento mais sustentável, através dos nossos projetos
                       influênciamos no processo de ensino aprendizagem dos jovens de uma forma mais lúdica e tecnológica, trazendo 
                       sempre soluções inteligentes para quem precisa potencializar a qualidade e os índices da educação nas redes e sistemas de ensino.
