--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                     <h1 class="display-3 text-dark mb-4 animated slideInDown">
                       Acumulamos mais de 10 anos no mercado
                     </h1>
-                    <p class="fs-4 text-body mb-5">
+                    <p class="fs-7 mb-5" style="color: black; background-color: #F58634; text-align: justify;">
                       Acreditamos na educação como o pilar para um desenvolvimento mais sustentável, através dos nossos projetos
                       influênciamos no processo de ensino aprendizagem dos jovens de uma forma mais lúdica e tecnológica, trazendo 
                       sempre soluções inteligentes para quem precisa potencializar a qualidade e os índices da educação nas redes e sistemas de ensino.
