--- a/index.html
+++ b/index.html
@@ -185,8 +185,10 @@
                     <h1 class="display-3 text-dark mb-4 animated slideInDown">
                       Acumulamos mais de 10 anos no mercado
                     </h1>
-                    <p class="fs-7 mb-5" style="margin-top: 10px;
-                    margin-bottom: 0px;
+                    <div style="background-color: #15233c">
+                    <p class="fs-7 mb-5" style="
+                    margin-top: 10px;
+                    margin-bottom: 10px;
                     margin-right: 10px;
                     margin-left: 10px;
                     color: white; background-color: #15233c; text-align: justify; font-weight: bold;font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">
@@ -194,6 +196,7 @@
                       influênciamos no processo de ensino aprendizagem dos jovens de uma forma mais lúdica e tecnológica, trazendo 
                       sempre soluções inteligentes para quem precisa potencializar a qualidade e os índices da educação nas redes e sistemas de ensino.
                     </p>
+                    </div>
                     <!-- <a href="" class="btn btn-primary py-3 px-5" style="border-color: #F58634; background-color: #F58634;"> 
                       Ver
                     </a>-->
