--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
               </h4>
               <div style="padding-top: 2rem;">
                 <center>
-                  <a href="about.html" class="align-self-center btn btn-secondary py-3 px-5">Ver +</a>
+                  <a href="about.html" class="align-self-center btn btn-secondary py-3 px-5">Ver mais</a>
                 </center>
               </div>
             </div>
@@ -294,25 +294,28 @@
               <div class="row g-5">
 
                 <div class="col-sm-6">
-                  <p class="fs-5 text-primary">+ Projetos entregues:</p>
-                  <h3 class="display-5" data-toggle="counter-up"> 1000</h3><h3 class="display-5">projetos entregues</h3>
+                  <h3 class="fs-5 text-primary">Mais de</h3>
+                  <h3 class="display-5" data-toggle="counter-up"> 1000</h3>
+                  <h3 class="fs-5 text-primary">projetos entregues</h3>
                   
                 </div>
 
                 <div class="col-sm-6">
-                  <p class="fs-5 text-primary">Regiões de atuação:</p> 
+                  <h3 class="fs-5 text-primary">Regiões de atuação:</h3> 
                   <h3 class="display-5" data-toggle="counter-up">4</h3>   
                 </div>
 
                 <div class="col-sm-6">
-                  <p class="fs-5 text-primary">Municípios contemplados:</p>
-                  <h4 class="display-5" data-toggle="counter-up">110</h4>
+                  <h3 class="fs-5 text-primary">Mais de</h3>
+                  <h3 class="display-5" data-toggle="counter-up"> 110</h3>
+                  <h3 class="fs-5 text-primary">Municipios contemplados</h3>
                 </div>
 
-                <!-- <div class="col-sm-6"> 
-                  <p class="fs-5 text-primary">Colaboradores:</p>
-                  <h1 class="display-5" data-toggle="counter-up">1234</h1>
-                </div> -->
+                <div class="col-sm-6"> 
+                  <h3 class="fs-5 text-primary">Mais de</h3>
+                  <h3 class="display-5" data-toggle="counter-up"> 15</h3>
+                  <h3 class="fs-5 text-primary">EStados contemplados</h3>
+                </div>
 
               </div>
             </div>
