--- a/index.html
+++ b/index.html
@@ -284,9 +284,9 @@
           <div class="col-lg-6 facts-text wow fadeIn" data-wow-delay="0.1s">
             <div class="px-4 ps-lg-0" style="display: flex; flex-direction: column; justify-content: center;">
               <h1 class="mb-4" style="color: #3B5489;">Buscamos no resultado a excelência!</h1>
-              <p class="mb-5" align="justify" style="color: #3B5489;">
-                Espalhados pelos Brasil, nossa equipe carrega uma grande responsabilidade no peito, oferecer as melhores soluções pedagógicas para o desenvolvimento de uma educação de qualidade.
-              </p>
+              <h4 class="fs-5 text-primary"" align="justify" style="color: #3B5489;">
+                Espalhados pelo Brasil, nossa equipe carrega uma grande responsabilidade no peito, oferecer as melhores soluções pedagógicas para o desenvolvimento de uma educação de qualidade.
+              </h4>
             </div>
           </div>
           <div class="col-lg-6 facts-counter wow fadeIn" data-wow-delay="0.5s">
@@ -301,11 +301,6 @@
                 </div>
 
                 <div class="col-sm-6">
-                  <h3 class="fs-5 text-primary">Regiões de atuação:</h3> 
-                  <h3 class="display-5" data-toggle="counter-up">4</h3>   
-                </div>
-
-                <div class="col-sm-6">
                   <h3 class="fs-5 text-primary">Mais de</h3>
                   <h3 class="display-5" data-toggle="counter-up"> 110</h3>
                   <h3 class="fs-5 text-primary">Municipios contemplados</h3>
@@ -315,6 +310,12 @@
                   <h3 class="fs-5 text-primary">Mais de</h3>
                   <h3 class="display-5" data-toggle="counter-up"> 15</h3>
                   <h3 class="fs-5 text-primary">EStados contemplados</h3>
+                </div>
+
+                <div class="col-sm-6">
+                  <h3 class="fs-5 text-primary">Atuando em</h3> 
+                  <h3 class="display-5" data-toggle="counter-up">4</h3>
+                  <h3 class="fs-5 text-primary">Regiões</h3>   
                 </div>
 
               </div>
