--- a/index.html
+++ b/index.html
@@ -284,10 +284,11 @@
           <div class="col-lg-6 facts-text wow fadeIn" data-wow-delay="0.1s">
             <div class="px-4 ps-lg-0" style="display: flex; flex-direction: column; justify-content: center;">
               <h1 class="mb-4" style="color: #3B5489;">Buscamos no resultado a excelência!</h1>
-              <h4 class="fs-5 text-primary"" align="justify" style="color: #3B5489;">
+              <h4 class="fs-5 text-primary" align="justify" style="color: #3B5489;">
                 Espalhados pelo Brasil, nossa equipe carrega uma grande responsabilidade no peito, oferecer as melhores soluções pedagógicas para o desenvolvimento de uma educação de qualidade.
               </h4>
             </div>
+            <br>
           </div>
           <div class="col-lg-6 facts-counter wow fadeIn" data-wow-delay="0.5s">
             <div class="px-4 pe-lg-0" style="display: flex; flex-direction: column; justify-content: center;">
