--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
           </div>
           <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
             <div class="h-100">
-              <h1 class="display-6 mb-5" style="color: #FFFFFF">
+              <h1 class="display-6 mb-3" style="color: #FFFFFF">
                 Saiba mais sobre a Feeling
               </h1>
               <h4 align="justify" style="color: #FFFFFF">
@@ -284,7 +284,7 @@
           <div class="col-lg-6 facts-text wow fadeIn" data-wow-delay="0.1s">
             <div class="px-4 ps-lg-0" style="display: flex; flex-direction: column; justify-content: center;">
               <h1 class="mb-4" style="color: #3B5489;">Buscamos no resultado a excelência!</h1>
-              <h4 class="fs-5 text-primary" align="justify" style="color: #3B5489;">
+              <h4 class="mb-4" align="justify" style="color: #777777;">
                 Espalhados pelo Brasil, nossa equipe carrega uma grande responsabilidade no peito, oferecer as melhores soluções pedagógicas para o desenvolvimento de uma educação de qualidade.
               </h4>
             </div>
@@ -308,15 +308,15 @@
                 </div>
 
                 <div class="col-sm-6"> 
-                  <h3 class="fs-5 text-primary">Mais de</h3>
-                  <h3 class="display-5" data-toggle="counter-up"> 15</h3>
-                  <h3 class="fs-5 text-primary">EStados contemplados</h3>
+                  <h3 class="fs-5 text-primary">Presente em</h3>
+                  <h3 class="display-5" data-toggle="counter-up"> 14</h3>
+                  <h3 class="fs-5 text-primary">Estados</h3>
                 </div>
 
                 <div class="col-sm-6">
                   <h3 class="fs-5 text-primary">Atuando em</h3> 
                   <h3 class="display-5" data-toggle="counter-up">4</h3>
-                  <h3 class="fs-5 text-primary">Regiões</h3>   
+                  <h3 class="fs-5 text-primary">das 5 regiões brasileiras</h3>   
                 </div>
 
               </div>
@@ -571,8 +571,7 @@
                       <a href="https://coopedu.com.br/" class="align-self-start btn btn-secondary py-3 px-5" target="_blank">CoopEdu</a> 
                     </div>
                   </div>
-                  <div>&nbsp;</div> 
-                  <div class="col-lg-4">
+                  <div class="col-lg-9">
                     <div style="justify-content: center; align-items: center; display: flex;">
                       <img style="width: 100%;" src="img/coopeduLogo.png" alt="Logo da Coopeedu"></img>
                     </div>
