--- a/index.html
+++ b/index.html
@@ -337,14 +337,13 @@
       </div>
     </div>
 
-    <div class="container-xxl py-5">
+    <div class="container-xxl py-4">
       <div class="container">
         <div class="row g-5">
           <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
-            
-            <p class="mb-4" align="justify">
-            Abaixo você poderá conhecer um pouco mais dos nossos projetos e ter acesso ao material gráfico de cada um deles. Além disso, é possível acompanhar de perto nossos registros de entrega e formação dos professores através de fotos e vídeos que serão alimentados periodicamente.
-            </p>
+            <h4 class="mb-4" align="justify" style="color: #777777;">
+              Abaixo você poderá conhecer um pouco mais dos nossos projetos e ter acesso ao material gráfico de cada um deles. Além disso, é possível acompanhar de perto nossos registros de entrega e formação dos professores através de fotos e vídeos que serão alimentados periodicamente.
+            </h4>
             <div class="row g-3">
               <div class="col-sm-6 wow fadeIn" data-wow-delay="0.1s">
                 <div class="bg-light rounded h-100 p-3">
@@ -423,18 +422,18 @@
 
     <div
       class="container-fluid py-5 wow fadeIn"
-      style="background-color: #2c4985; margin-bottom: 0.2rem !important;"
+      style="background-color: #2c4985;"
       data-wow-delay="0.1s">
       <div class="container py-3">
           <div class="row g-5">
               <div class="col-lg-12 wow fadeIn" data-wow-delay="0.3s">
                 <div class="row">
                   <div class="col-lg-8">
-                    <h1 class="display-6 text-center text-white mb-5">
+                    <h1 class="display-6 text-center text-white mb-4">
                       Mapa dos consultores
                     </h1>
 
-                    <p class="text-white mb-5">
+                    <p class="text-white mb-4">
                       Através do mapa fica fácil localizar o nosso representante mais perto de você, clicando na região que deseja você terá de forma simplificada todos os dados necessários para entrar em contato com um deles.
                     </p>
 
