--- a/index.html
+++ b/index.html
@@ -550,36 +550,41 @@
     -->
 
     <div
-      class="container-fluid py-5 wow fadeIn"
-      style="background: #2c4985; background-size: cover;"
-      data-wow-delay="0.1s">
-      <div class="container py-3">
-          <div class="row g-5">
-              <div class="col-lg-12 wow fadeIn" data-wow-delay="0.3s">
-                <div class="row">
-                  <div class="col-lg-8">
-                    <h1 class="display-6 text-center text-white mb-5">
-                      Nosso parceiro
-                    </h1>
+    class="container-fluid  text-justify py-5 wow fadeIn"
+    style="background-color: #2c4985;"
+    data-wow-delay="0.1s">
+    <div class="container py-3">
+        <div class="row g-5">
+            <div class="col-lg-12 wow fadeIn" data-wow-delay="0.3s">
+              <div class="row">
+                <div class="col-lg-8">
+                  <h1 class="display-6 text-center text-white mb-4">
+                    Nosso parceiro
+                  </h1>
 
-                    <p class="text-white text-center mb-5">
-                      Navegue no site do nosso parceiro para saber mais!
-                    </p>
+                  <p class="text-white mb-4">
+                    Uma cooperativa para profissionais da área da
+                    educação comprometida com a excelência. Navegue
+                    no site do nosso parceiro para saber mais sobre 
+                    como se tornar um cooperado e das vantagens
+                    de se associar.
+                  </p>
 
-                    <div style="justify-content: center; align-items: center; display: flex;">
-                      <a href="https://coopedu.com.br/" class="align-self-start btn btn-secondary py-3 px-5" target="_blank">CoopEdu</a> 
-                    </div>
+                  <div style="justify-content: center; align-items: center; display: flex;">
+                    <a href="mapas.html" class="align-self-start btn btn-secondary py-3 px-5">Quero saber mais</a>  
                   </div>
-                  <div class="col-lg-9">
-                    <div style="justify-content: center; align-items: center; display: flex;">
-                      <img style="width: 100%;" src="img/coopeduLogo.png" alt="Logo da Coopeedu"></img>
-                    </div>
+                </div>
+
+                <div class="col-lg-4">
+                  <div style="justify-content: center; align-items: center; display: flex;">
+                    <img style="width: 70%;" src="img/coopedu.png" alt="Mapa do Brasil em azul">  
                   </div>
-                </div>  
-            </div>
+                </div>
+              </div>  
           </div>
-      </div>
+        </div>
     </div>
+  </div>
 
     <div
       class="container-fluid bg-dark footer pt-5 wow fadeIn"
