retorno do carrossel de feedback de clientes Abrir nova aba ao clicar no link do parceiro Justificação de textos Diagramação de textos

--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
                       Mapa dos consultores
                     </h1>
 
-                    <p class="text-white mb-4">
+                    <p class="text-white mb-4" style="text-align: justify;">
                       Através do mapa fica fácil localizar o nosso representante mais perto de você, clicando na região que deseja você terá de forma simplificada todos os dados necessários para entrar em contato com um deles.
                     </p>
 
@@ -453,7 +453,6 @@
       </div>
     </div>
     
-    <!--
     <div class="container-xxl py-5">
       <div class="container">
         <div class="text-center mx-auto" style="max-width: 500px">
@@ -547,10 +546,9 @@
         </div>
       </div>
     </div>
-    -->
 
     <div
-    class="container-fluid  text-justify py-5 wow fadeIn"
+    class="container-fluid text-justify py-5 wow fadeIn"
     style="background-color: #2c4985;"
     data-wow-delay="0.1s">
     <div class="container py-3">
@@ -562,7 +560,7 @@
                     Nosso parceiro
                   </h1>
 
-                  <p class="text-white mb-4">
+                  <p class="text-white mb-4" style="text-align: justify;">
                     Uma cooperativa para profissionais da área da
                     educação comprometida com a excelência. Navegue
                     no site do nosso parceiro para saber mais sobre 
@@ -571,7 +569,7 @@
                   </p>
 
                   <div style="justify-content: center; align-items: center; display: flex;">
-                    <a href="mapas.html" class="align-self-start btn btn-secondary py-3 px-5">Quero saber mais</a>  
+                    <a onclick=window.open('http://coopedu.com.br/') class="align-self-start btn btn-secondary py-3 px-5">Quero saber mais</a>  
                   </div>
                 </div>
 
