--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
                   </h1>
 
                   <p class="text-white mb-4" style="text-align: justify;">
-                    Uma cooperativa para profissionais da área da
+                    A Coopedu é uma cooperativa para profissionais da área da
                     educação comprometida com a excelência. Navegue
                     no site do nosso parceiro para saber mais sobre 
                     como se tornar um cooperado e das vantagens
