--- a/index.html
+++ b/index.html
@@ -487,12 +487,12 @@
                   alt=""
                 />
                 <p class="fs-5">
-                  Dolores sed duo clita tempor justo dolor et stet lorem kasd
-                  labore dolore lorem ipsum. At lorem lorem magna ut et, nonumy
-                  et labore et tempor diam tempor erat.
+                  Esperência muito boa com o material, o pós venda
+                  foi totalmente incrível, me senti bem atendido do 
+                  inicio ao fim. Recomendo demais!
                 </p>
-                <h5>Cliente 1</h5>
-                <span>Serviço/Cargo</span>
+                <h5>Jorge Manfred</h5>
+                <span>Coordenador de Projetos Pedagógicos</span>
               </div>
               <div class="testimonial-item text-center">
                 <img
@@ -501,12 +501,12 @@
                   alt=""
                 />
                 <p class="fs-5">
-                  Dolores sed duo clita tempor justo dolor et stet lorem kasd
-                  labore dolore lorem ipsum. At lorem lorem magna ut et, nonumy
-                  et labore et tempor diam tempor erat.
+                  Amei todos os kits, meus pequenos adoraram
+                  o material, é bastante chamativo pra eles.
+                  Nota 10 pra usabilidade, super intuitivo, recomendo demais!
                 </p>
-                <h5>Cliente 2</h5>
-                <span>Serviço/Cargo</span>
+                <h5>Sayonara Azevedo</h5>
+                <span>Profª. Dra. Especialista em Educação Infantil</span>
               </div>
               <div class="testimonial-item text-center">
                 <img
@@ -515,12 +515,13 @@
                   alt=""
                 />
                 <p class="fs-5">
-                  Dolores sed duo clita tempor justo dolor et stet lorem kasd
-                  labore dolore lorem ipsum. At lorem lorem magna ut et, nonumy
-                  et labore et tempor diam tempor erat.
+                  Tive ótimo feedback dos meus professores,
+                  todos eles avaliaram muito bem os projetos pedagógicos.
+                  Fui amparado diversas vzes pelo pôs venda que me 
+                  amparou de prontidão diversas vezes!
                 </p>
-                <h5>Cliente 3</h5>
-                <span>Serviço/Cargo</span>
+                <h5>Jeffersson Oliveira</h5>
+                <span>Diretor Acadêmico</span>
               </div>
             </div>
           </div>
