--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@
                   </p>
 
                   <div style="justify-content: center; align-items: center; display: flex;">
-                    <a onclick=window.open('http://coopedu.com.br/') class="align-self-start btn btn-secondary py-3 px-5">Quero saber mais</a>  
+                    <a onclick=window.open("http://coopedu.com.br/") class="align-self-start btn btn-secondary py-3 px-5">Quero saber mais</a>  
                   </div>
                 </div>
 
