Modificação completa dos laboratórios

--- a/labs.html
+++ b/labs.html
@@ -105,7 +105,7 @@
             <small>comercial@feelingholding.com.br</small>
           </div>
         </div>
-        <!-- <div class="col-lg-5 px-5 text-end">
+        <!-- <div class="col-lg-5 px-5 text-end"> 
           <div class="h-100 d-inline-flex align-items-center">
             <a class="text-white-50 ms-4" href=""
               ><i class="fab fa-facebook-f"></i
@@ -120,7 +120,7 @@
               ><i class="fab fa-instagram"></i
             ></a>
           </div>
-        </div> -->
+        </div>-->
       </div>
     </div>
 
@@ -169,61 +169,65 @@
     <div class="container" style="padding-top: 1.5rem !important;">
       <h1 class="display-4 animated slideInDown mb-4">Laboratórios</h1>
     </div>
-
     <div
       class="container-fluid page-header wow fadeIn"
-      data-wow-delay="0.1s", style="display: flex; flex-direction: row; padding-bottom: 1.5rem;"
+      data-wow-delay="0.1s", style="padding-bottom: 1.5rem;"
     >
-      <div class="card" style="margin-left: 1.5%; width: 18rem;">
-        <img class="card-img-top" src="img/robotica.jpg" alt="Card image cap">
-          <div class="card-body">
-            <h5 class="card-title" style="text-align: center;">Robótica</h5>
+      <div class="col-sm-12" style="display: flex; flex-direction: row; justify-content: space-around; padding-bottom: 3%;">
+        <div class="card" style="width: 18rem;">
+          <img class="card-img-top" src="img/robotica.jpg" alt="Card image cap">
+            <div class="card-body" style="justify-content: center;">
+              <h6 style="text-align: center;" class="card-title">Robótica</h6>  
           </div>
           <div class="card-footer">
             <a style="width: 100%;" href="robotica.html" class="btn btn-primary">Ver</a>
           </div>
-      </div> 
-
-      <div class="card" style="margin-left: 1.5%; width: 18rem;">
-        <img class="card-img-top" src="img/matematica.jpg" alt="Card image cap">
-          <div class="card-body">
-            <h5 class="card-title" style="text-align: center;">Matemática</h5> 
+        </div> 
+  
+        <div class="card" style="width: 18rem;">
+          <img class="card-img-top" src="img/matematica.jpg" alt="Card image cap">
+            <div class="card-body" style="justify-content: center;">
+              <h6 style="text-align: center;" class="card-title">Matemática</h6>  
           </div>
           <div class="card-footer">
             <a style="width: 100%;" href="matematica.html" class="btn btn-primary">Ver</a>
           </div>
-      </div>
-
-      <div class="card" style="margin-left: 1.5%; width: 18rem;">
-        <img class="card-img-top" src="img/ciencias.jpg" alt="Card image cap">
-          <div class="card-body">
-            <h5 class="card-title" style="text-align: center;">Ciências</h5> 
+        </div>
+  
+        <div class="card" style="width: 18rem;">
+          <img class="card-img-top" src="img/ciencias.jpg" alt="Card image cap">
+            <div class="card-body" style="justify-content: center;">
+              <h6 style="text-align: center;" class="card-title">Ciências</h6>  
           </div>
           <div class="card-footer">
             <a style="width: 100%;" href="ciencia.html" class="btn btn-primary">Ver</a>
           </div>
+        </div>
       </div>
 
-      <div class="card" style="margin-left: 1.5%; width: 18rem;">
-        <img class="card-img-top" src="img/inclusaosocial.jpg" alt="Card image cap">
-          <div class="card-body">
-            <h5 class="card-title" style="text-align: center;">Inclusão Social</h5> 
+      <div class="col-sm-12" style="display: flex; flex-direction: row; justify-content: space-around; padding-bottom: 3%;">
+        <div class="card" style="width: 18rem;">
+          <img class="card-img-top" src="img/inclusaosocial.jpg" alt="Card image cap">
+            <div class="card-body" style="justify-content: center;">
+              <h6 style="text-align: center;" class="card-title">Inclusão Social</h6>  
           </div>
           <div class="card-footer">
             <a style="width: 100%;" href="inclusao.html" class="btn btn-primary">Ver</a>
           </div>
-      </div>
-    </div>
-    </div>
-      <div class="card" style="margin-left: 1.5%; width: 18rem;">
-        <img class="card-img-top" src="img/3d.jpg" alt="Card image cap">
-          <div class="card-body">
-            <h5 class="card-title" style="text-align: center;">Ensino em 3D</h5> 
+        </div>
+  
+        <div class="card" style="width: 18rem;">
+          <img class="card-img-top" src="img/3d.jpg" alt="Card image cap">
+            <div class="card-body" style="justify-content: center;">
+              <h6 style="text-align: center;" class="card-title">Ensino em 3D</h6>  
           </div>
           <div class="card-footer">
             <a style="width: 100%;" href="ensino.html" class="btn btn-primary">Ver</a>
           </div>
+        </div> 
+  
       </div>
+    </div>
     </div>
     
     <div
@@ -240,7 +244,7 @@
                 alt=""
               />
             </h1>
-            <!-- <p style="color:rgba(255, 255, 255, 0.9)">  
+            <p style="color:rgba(255, 255, 255, 0.9)"> 
               Nossas redes sociais
             </p>
             <div class="d-flex pt-2">
@@ -256,7 +260,7 @@
               <a class="btn btn-square me-0" href=""
                 ><i class="fab fa-linkedin-in"></i
               ></a>
-            </div>-->
+            </div>
           </div>
           <div class="col-lg-3 col-md-6">
             <h5 class="text-light mb-4">Endereço</h5>
