Alterações diagramação e paragrafos de matematica

--- a/matematica.html
+++ b/matematica.html
@@ -162,20 +162,15 @@
       </div>
     </nav>
 
-    <div
-      class="container-fluid page-header py-5 mb-5 wow fadeIn"
-      data-wow-delay="0.1s"
-    >
-      <div class="container py-5">
-        <h1 class="display-4 animated slideInDown mb-4">Matemática do futuro</h1>
-        <nav aria-label="breadcrumb animated slideInDown">
-          <ol class="breadcrumb mb-0">
-          </ol>
-        </nav>
-      </div>
+    <div class="container" style="padding-top: 1.5rem !important;">
+      <h1 class="display-4 animated slideInDown mb-4">Matemática do Futuro</h1>
     </div>
+    <div
+      class="container-fluid page-header wow fadeIn"
+      data-wow-delay="0.1s", style="padding-bottom: 1.5rem;"
+    >
 
-    <div class="container-xxl py-5">
+    <div class="container-xxl">
       <div class="container">
         <div class="row g-5">
 
@@ -202,16 +197,6 @@
               <p class="mb-4" Align="justify">
                 A Matemática está presente em nossas vidas desde os primórdios do surgimento do homem, sendo fundamental no funcionamento e organização de quase tudo ao nosso redor, tendo como elementos os números, medidas, figuras geométricas e outros conceitos inerentes a essa disciplina.
               </p>
-            </div>
-          </div>
-
-          <!--  -->
-
-         <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
-            <div class="h-100">
-
-              <h1 class="display-6 mb-5"></h1>
-
               <p class="fs-5 text-primary mb-4">
                 Itens:
               </p>
@@ -224,7 +209,16 @@
               </p>
               <p class="mb-4" Align="justify">
                 Oferecemos 04 modelos de laboratório individualmente direcionados a uma fase do ensino, são elas: infantil, fundamental, I e II e Ensino Médio.
-              </p>
+              </p>s
+            </div>
+          </div>
+
+          <!--  -->
+
+         <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
+            <div class="h-100">
+
+              <h1 class="display-6 mb-5"></h1>
 
             </div>
           </div>
