--- a/matematica.html
+++ b/matematica.html
@@ -239,7 +239,7 @@
         </div>
       </div>
     </div> 
-    
+    </div>
     <div
       class="container-fluid bg-dark footer mt-5 pt-5 wow fadeIn"
       data-wow-delay="0.1s"
