Configuração de modelos para ensino inclusão e robotica

--- a/inclusao.html
+++ b/inclusao.html
@@ -72,7 +72,7 @@
   </head>
 
   <body>
-
+    
     <div vw class="enabled">
       <div vw-access-button class="active"></div>
       <div vw-plugin-wrapper>
@@ -145,7 +145,7 @@
             <img class="img-fluid me-3" src="img/logo.png" alt="" />
           </a>
           <a href="index.html" class="nav-item nav-link">Home</a>
-          <a href="about.html" class="nav-item nav-link">Sobre</a>
+          <a href="about.html" class="nav-item nav-link active">Sobre</a>
           <a href="mapas.html" class="nav-item nav-link">Mapa</a>
           <div class="nav-item dropdown">
             <a
@@ -162,26 +162,21 @@
       </div>
     </nav>
 
-    <div
-      class="container-fluid page-header py-5 mb-5 wow fadeIn"
-      data-wow-delay="0.1s"
-    >
-      <div class="container py-5">
-        <h1 class="display-4 animated slideInDown mb-4">Inclusão Social</h1>
-        <nav aria-label="breadcrumb animated slideInDown">
-          <ol class="breadcrumb mb-0">
-          </ol>
-        </nav>
-      </div>
+    <div class="container" style="padding-top: 1.5rem !important;">
+      <h1 class="display-4 animated slideInDown mb-4">Inclusão Social</h1>
     </div>
+    <div
+      class="container-fluid page-header wow fadeIn"
+      data-wow-delay="0.1s", style="padding-bottom: 1.5rem;"
+    >
 
-    <div class="container-xxl py-5">
+    <div class="container-xxl">
       <div class="container">
         <div class="row g-5">
 
           <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
             <div
-              class="position-relative overflow-hidden rounded ps-5 pt-5 h-100"
+              class="position-relative overflow-hidden rounded h-100"
               style="min-height: 500px">
               <img
                 class="position-absolute w-100 h-100"
@@ -202,16 +197,6 @@
               <p class="mb-4" Align="justify">
                 O Programa educacional destinado ao trabalho de inclusão social, disponibiliza para os educadores um amplo acervo de recursos pedagógicos, adaptados para atender aos alunos com necessidades especiais e servindo como guia no manejo do processo de ensino-aprendizagem dessas crianças, jovens e adultos.
               </p>
-            </div>
-          </div>
-
-          <!--  -->
-
-         <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
-            <div class="h-100">
-
-              <h1 class="display-6 mb-5"></h1>
-
               <p class="fs-5 text-primary mb-4">
                 Itens:
               </p>
@@ -223,27 +208,18 @@
                 Publico
               </p>
               <p class="mb-4" Align="justify">
-              Atende alunos a partir de 2 anos.
+                Atende alunos a partir de 2 anos.
               </p>
-
+              <a style="width: 100%;" href="https://drive.google.com/drive/folders/1oVOMJWsjwCjog_Jw4lfA_q-RCsZrw8Tc?usp=share_link" class="btn btn-primary">Acesse o folder</a>
             </div>
           </div>
 
-          <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
-            <div
-              class="position-relative overflow-hidden rounded ps-5 pt-5 h-100"
-              style="min-height: 500px">
-              <img
-                class="position-absolute w-100 h-100"
-                src="img/projetos/inclusaosocial2.jpg"
-                alt=""
-                style="object-fit: cover"/>
-            </div>
-          </div>
+          <!--  -->
+
         </div>
       </div>
     </div> 
-    
+    </div>
     <div
       class="container-fluid bg-dark footer mt-5 pt-5 wow fadeIn"
       data-wow-delay="0.1s"
@@ -258,7 +234,7 @@
                 alt=""
               />
             </h1>
-            <p style="color:rgba(255, 255, 255, 0.9)"> 
+            <!-- <p style="color:rgba(255, 255, 255, 0.9)"> 
               Nossas redes sociais
             </p>
             <div class="d-flex pt-2">
@@ -274,7 +250,7 @@
               <a class="btn btn-square me-0" href=""
                 ><i class="fab fa-linkedin-in"></i
               ></a>
-            </div>
+            </div> -->
           </div>
           <div class="col-lg-3 col-md-6">
             <h5 class="text-light mb-4">Endereço</h5>
